--- a/reactogram-be/package.json
+++ b/reactogram-be/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "social media app",
   "main": "server.js",
-  "type": "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
