--- a/reactogram-be/package.json
+++ b/reactogram-be/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "social media app",
   "main": "server.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +14,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
